--- a/InactividadAtraso.html
+++ b/InactividadAtraso.html
@@ -131,68 +131,66 @@
     </div>
 
     <div class="row" id="body">
-        <table class="table table-bordered numeros">
-            <thead>
-                <tr>
-                    <th style="width: 120px;">Inactividad</th>
-                    <th style="width: 100px;">Actual</th>
-                    <th style="width: 100px;">1-29</th>
-                    <th style="width: 100px;">30-59</th>
-                    <th style="width: 100px;">Atraso 90</th>
-                    <th style="width: 100px;">Atraso 120</th>
-                    <th style="width: 100px;">Atraso 150</th>
-                    <th style="width: 100px;">Atraso 180</th>
-                    <th style="width: 100px;">Atraso 210</th>
-                    <th style="width: 100px;">Atraso 240</th>
-                    <th style="width: 100px;">Atraso 270</th>
-                    <th style="width: 100px;">Atraso > 270</th>
-                    <th style="width: 100px;">TOTAL</th>
-                </tr>
-                <tr>
-                    <th colspan="13">$</th>
-                </tr>
-            </thead>
-            <tbody id="tablaAtraso" class="tablaAtrasoInactividad">
-            </tbody>
-        </table>
+        <div class="col">
+            <table class="table table-bordered numeros tablaAtraso">
+                <thead>
+                    <tr>
+                        <th>Inactividad</th>
+                        <th>Actual</th>
+                        <th>1-29</th>
+                        <th>30-59</th>
+                        <th>Atraso 90</th>
+                        <th>Atraso 120</th>
+                        <th>Atraso 150</th>
+                        <th>Atraso 180</th>
+                        <th>Atraso 210</th>
+                        <th>Atraso 240</th>
+                        <th>Atraso 270</th>
+                        <th>Atraso > 270</th>
+                        <th>TOTAL</th>
+                    </tr>
+                </thead>
+                <tbody id="tablaAtraso" class="tablaAtrasoInactividad">
+                </tbody>
+            </table>
+        </div>
     </div>
     <div class="row" id="body">
-        <table class="table table-bordered porcentajes">
-            <thead>
-                <tr>
-                    <th style="width: 120px;">Inactividad</th>
-                    <th style="width: 100px;">Actual</th>
-                    <th style="width: 100px;">1-29</th>
-                    <th style="width: 100px;">30-59</th>
-                    <th style="width: 100px;">Atraso 90</th>
-                    <th style="width: 100px;">Atraso 120</th>
-                    <th style="width: 100px;">Atraso 150</th>
-                    <th style="width: 100px;">Atraso 180</th>
-                    <th style="width: 100px;">Atraso 210</th>
-                    <th style="width: 100px;">Atraso 240</th>
-                    <th style="width: 100px;">Atraso 270</th>
-                    <th style="width: 100px;">Atraso > 270</th>
-                    <th style="width: 100px;">TOTAL</th>
-                </tr>
-                <tr>
-                    <th colspan="13">%</th>
-                </tr>
-            </thead>
-            <tbody id="tablaAtrasoPCT" class="tablaAtrasoInactividad">
-            </tbody>
-        </table>
+        <div class="col">
+            <table class="table table-bordered porcentajes tablaAtraso">
+                <thead>
+                    <tr>
+                        <th>Inactividad</th>
+                        <th>Actual</th>
+                        <th>1-29</th>
+                        <th>30-59</th>
+                        <th>Atraso 90</th>
+                        <th>Atraso 120</th>
+                        <th>Atraso 150</th>
+                        <th>Atraso 180</th>
+                        <th>Atraso 210</th>
+                        <th>Atraso 240</th>
+                        <th>Atraso 270</th>
+                        <th>Atraso > 270</th>
+                        <th>TOTAL</th>
+                    </tr>
+                </thead>
+                <tbody id="tablaAtrasoPCT" class="tablaAtrasoInactividad">
+                </tbody>
+            </table>
+        </div>
     </div>
     <div class="row" id="body">
         <table class="table table-bordered resumen">
             <thead>
                 <tr>
-                    <td class="tituloTabla" colspan="4">RESUMEN</td>
+                    <th class="tituloTabla" colspan="4">Resumen</th>
                 </tr>
                 <tr>
                     <th style="width: 120px;"></th>
-                    <th style="width: 100px;">Capital</th>
-                    <th style="width: 100px;">Intereses</th>
-                    <th style="width: 100px;">IVA</th>
+                    <th>Capital</th>
+                    <th>Intereses</th>
+                    <th>IVA</th>
                 </tr>
             </thead>
             <tbody id="tablaResumen">
