--- a/General.html
+++ b/General.html
@@ -235,7 +235,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>93.7%</td>
+                                <td id="vsVigente"></td>
                             </tr>
                         </tbody>
                     </table>
