--- a/InactividadAtraso.html
+++ b/InactividadAtraso.html
@@ -7,6 +7,7 @@
     <title>Monitor de Cobranza: Inactividad y atraso</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 
     <link rel="stylesheet" href="css/estiloGeneral.css">
     <link rel="stylesheet" href="css/estiloActividadAtraso.css">
